# fp-class

./: .travis.yml  FP.cabal  README.md  class-01.hs  class-02.hs  class-03.hs  class-04.hs
class-05/1-Logic3/: Logic3.hs
class-05/2-Drunkard_game/: Drunkard.hs
class-05/3-Graham_scan/: GrahamScan.hs
class-06/: 01-genfile.hs  02-textproc.hs  03-coords.hs  04-db.hs  05-graham.hs  06-bulls_n_cows.hs
class-07/: 01-genintfile.hs  02-nub.hs  03-intersect.hs  04-union.hs  05-analyze-text.hs  06-matrices.hs  kapitan.txt
class-08/: 01-expressions.hs  02-listable.hs
class-08/03-queues/: AbstractQueue.hs  FastQueue.hs  Queue.hs  SequenceQueue.hs  main.hs  mtest.hs  tasks.txt
class-08/04-sets/: AbstractSet.hs  ListSet.hs  setTests.hs  tasks.txt
class-08/05-graphs/: AbstractGraph.hs  tasks.txt
class-09/: 01-totalLength.hs  02-reduce.hs  03-sensor.hs  04-maxapp.hs
class-10/: 01-data-reader.hs  02-rope-walker.hs  03-inventory-checker.hs  04-nfa.hs  05-intersect.hs  inventory.txt
class-11/: STRef_sorts.hs  StateQueue.hs  Taylor.hs  config.ini  evaluator.hs  queueTest.hs  tasks.txt
class-12/: 01-password.hs  02-polish-calc.hs  03-dirgen.hs  04-wolf-goat-cabbage-puzzle.hs  count.hs  kalotans-puzzle.hs
class-13/: 01-maybe-parser.hs  02-float_complex.hs  03-url.hs  04-full-par-expr.hs  05-expr-compl.hs  06-polynomials.hs  ParseNumbers.hs  Parser.hs  SimpleParsers.hs  poly.txt
tests/: TestStateQueue.hs  TestTaylor.hs
