Name: FP
Version: 0.0.11
Cabal-Version: >= 1.8
Author: Artem Konenko
Maintainer: Artem Konenko <yadummer@gmail.com>
Description: Home tasks to FP cource
Stability: experimental
Build-Type: Simple

Library
  Build-Depends:   base, mtl, array
  Exposed-Modules: Taylor, StateQueue, STRef_sorts
  Hs-Source-Dirs:  class-11

Test-Suite TestStateQueue
  type:            detailed-0.9
  test-module:     TestStateQueue
  Build-Depends:   base, mtl, Cabal, FP
  Hs-Source-Dirs:  tests

Test-Suite TestTaylor
  type:            detailed-0.9
  test-module:     TestTaylor
  Build-Depends:   base, mtl, Cabal, FP
  Hs-Source-Dirs:  tests